Test compatibility with JVM 17
See https://github.com/kotest/kotest/issues/3035